[tool.poetry]
name = "ronpari"
version = "0.6.1"
description = "CLI tool for reading manga from Mangadex"
authors = ["Artem Basenko"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^12.5.1"
rich-click = "^1.5.1"
tinydb = "^4.7.0"
mangadex = "^2.5.2"
screeninfo = "^0.8"
pretty-errors = "^1.2.25"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
poethepoet = "^0.15.0"
bpython = "^0.22.1"
flake8 = "^4.0.1"
icecream = "^2.1.3"
wily = "^1.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ronpari = "ronpari.cli:manga_cli"

[tool.poe.tasks]
test = "pytest -v"

